changes to funding API;s and swagger
