# superAdmin/routes/userRoute.js
@@ -4,7 +4,7 @@ const superAdminUsersController = require('../controllers/userControllers')
 router.post('/login', superAdminUsersController.validateLoginProcess, superAdminUsersController.superAdminLogin);
 
 //Below "/user-login" is copy of "/login". But, changed response structure & written for sake of Swagger documentation 
-router.post('/user-login', superAdminUsersController.validateLoginProcessForSwagger, superAdminUsersController.loginUserForSwagger)
+router.post('/super-admin-login', superAdminUsersController.validateLoginProcessForSwagger, superAdminUsersController.loginUserForSwagger)
 
 
 module.exports = router
